# genom

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build-database.yml  deploy-docs.yml  publish.yml  tests.yml
docs-src/: 404.html  genom.js  index.html  style.css
docs-src/docs/: index.html  style.css
src/: database.rs  enrichment.rs  lib.rs  main.rs  types.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
