[package]
name = "genom"
version = "0.1.0"
edition = "2021"
description = "Fast reverse geocoding with additional location data"
license = "Apache-2.0"
authors = ["tn3w <tn3w@protonmail.com>"]
repository = "https://github.com/tn3w/genom"
homepage = "https://genom.tn3w.dev"
documentation = "https://genom.tn3w.dev/docs"
readme = "README.md"
keywords = ["geocoding", "reverse-geocoding", "location", "geonames", "coordinates"]
categories = ["algorithms", "data-structures", "science::geo"]
exclude = ["data/"]

[dependencies]
bincode = "2.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
chrono-tz = "0.10"
rustc-hash = "2.1"

[build-dependencies]
reqwest = { version = "0.13", features = ["blocking"] }
zip = "7.4"
rustc-hash = "2.1"
bincode = "2.0"
serde = { version = "1.0", features = ["derive"] }
