[workspace]
members = ["."]

[package]
name = "genom"
version = "1.1.0"
edition = "2021"
description = "Fast reverse geocoding with additional location data"
license = "Apache-2.0"
authors = ["tn3w <tn3w@protonmail.com>"]
repository = "https://github.com/tn3w/genom"
homepage = "https://genom.tn3w.dev"
documentation = "https://genom.tn3w.dev/docs"
readme = "README.md"
keywords = ["geocoding", "reverse-geocoding", "location", "geonames", "coordinates"]
categories = ["algorithms", "data-structures", "science::geo"]
exclude = ["data/", "target/"]

[features]
default = []
no-build-database = []
builder = ["reqwest", "zip"]

[[bin]]
name = "build-database"
path = "src/bin/build-database.rs"

[dependencies]
bincode = "2.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
chrono-tz = "0.10"
rustc-hash = "2.1"
reqwest = { version = "0.13", features = ["blocking"], optional = true }
zip = { version = "8.1", optional = true }

[build-dependencies]
reqwest = { version = "0.13", features = ["blocking"] }
